# common/invocation/src/main/java/org/hpcclab/oaas/invocation/controller/fn/MacroFunctionController.java
@@ -2,24 +2,17 @@ package org.hpcclab.oaas.invocation.controller.fn;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.smallrye.mutiny.Uni;
-import jakarta.inject.Inject;
-import org.eclipse.collections.api.set.MutableSet;
 import org.hpcclab.oaas.invocation.InvocationCtx;
 import org.hpcclab.oaas.invocation.dataflow.DataflowOrchestrator;
 import org.hpcclab.oaas.invocation.dataflow.DataflowSemantic;
-import org.hpcclab.oaas.model.function.DataflowStep;
-import org.hpcclab.oaas.model.invocation.InvocationChain;
 import org.hpcclab.oaas.repository.id.IdGenerator;
-
-import java.util.ArrayList;
-import java.util.List;
 
 /**
  * @author Pawissanutt
  */
 public class MacroFunctionController extends AbstractFunctionController {
-  DataflowSemantic semantic;
   final DataflowOrchestrator orchestrator;
+  DataflowSemantic semantic;
 
   public MacroFunctionController(IdGenerator idGenerator,
                                  ObjectMapper mapper,
